--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,8 @@ edition = "2018"
 image = "0.23"
 ndarray = "0.13"
 ndarray-stats = "0.3"
+ndarray-rand = "0.11"
+
 minifb = "0.18"
+
+serial_test = "0.4"
