--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2018"
 
 [dependencies]
 image = "0.23"
-ndarray = "0.13"
-ndarray-rand = "0.11"
-
+ndarray = "0.14"
+ndarray-rand = "0.13"
+serial_test = "0.5"
+rand_isaac = "0.3.0"
 
 [dev-dependencies]
 show-image = {version = "0.6", features = ["image"]}
